# torch-gaussian-splatting-rasterizer

./: .gitignore  README.md  bbox_for_a_gaussian.md  cam_intrinsics.json  check_list.txt  data_reader.py  data_reader_utils.py  gaussian.py  rasterize.py  renaming.py  requirements.txt  spherical_harmonics.md  spherical_harmonics.py  test_pytorch_3d.py  train.py  utils.py
c++_playground/: README.md  hello_word
c++_playground/algorithm_practice/: find_min_array  find_min_array.cpp  testing_classes  testing_classes.cpp
c++_playground/algorithm_practice/find_min_array.dSYM/Contents/: Info.plist
c++_playground/algorithm_practice/find_min_array.dSYM/Contents/Resources/DWARF/: find_min_array
c++_playground/algorithm_practice/testing_classes.dSYM/Contents/: Info.plist
c++_playground/algorithm_practice/testing_classes.dSYM/Contents/Resources/DWARF/: testing_classes
c++_playground/basic_rasterizer/: CMakeLists.txt  main.cpp  read_gltf.cpp
c++_playground/basic_rasterizer/artifacts/1995_-_mclaren_f1_gtr_rigged__mid-poly/: license.txt  scene.gltf
c++_playground/hello_word.dSYM/Contents/: Info.plist
c++_playground/hello_word.dSYM/Contents/Resources/DWARF/: hello_word
c++_playground/hello_word.dSYM/Contents/Resources/Relocations/x86_64/: hello_word.yml
c++_playground/hello_world_example/: hello_word  hello_word.cpp
c++_playground/hello_world_example/hello_word.dSYM/Contents/: Info.plist
c++_playground/leetcode_style/: 0_knapsack  0_knapsack.cpp  numerical_to_roman  numerical_to_roman.cpp  unbounded_knapsack  unbounded_knapsack.cpp
rasterizer_playground/: perspective_transform.py  rasterize.py  rasterize_triangle.py
(+4 files in other folders)
